force-app/main/default/objects/Person__c/fields/DoctorId__c.field-meta.xml
<CustomField>
    <fullName>DoctorId__c</fullName>
    <externalId>true</externalId>
    <label>DoctorId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>