force-app/main/default/objects/Person__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The person&apos;s email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>