force-app/main/default/objects/Person__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Person&apos;s last name.</description>
    <label>Last Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>