force-app/main/default/objects/Person__c/fields/Personal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_ID_Number__c</fullName>
    <description>An individual&apos;s personal identification number (PESEL).</description>
    <label>Personal ID Number</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>