force-app/main/default/objects/Person__c/fields/PESEL__c.field-meta.xml
<CustomField>
    <fullName>PESEL__c</fullName>
    <description>Person&apos;s PESEL number.</description>
    <label>PESEL</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>