force-app/main/default/objects/Person__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The person&apos;s phone number.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>