force-app/main/default/objects/Person__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Working schedule for Doctor</description>
    <label>Schedule</label>
    <type>TextArea</type>
</CustomField>