force-app/main/default/objects/Person__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <description>Doctor&apos;s medical specialization.</description>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Laryngologist</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
                <isActive>false</isActive>
                <label>Cardiology</label>
            </value>
            <value>
                <fullName>Dermatology</fullName>
                <isActive>false</isActive>
                <label>Dermatology</label>
            </value>
            <value>
                <fullName>Neurology</fullName>
                <isActive>false</isActive>
                <label>Neurology</label>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
                <isActive>false</isActive>
                <label>Orthopedics</label>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
                <isActive>false</isActive>
                <label>Pediatrics</label>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
                <isActive>false</isActive>
                <label>Psychiatry</label>
            </value>
            <value>
                <fullName>Radiology</fullName>
                <isActive>false</isActive>
                <label>Radiology</label>
            </value>
            <value>
                <fullName>Surgery</fullName>
                <isActive>false</isActive>
                <label>Surgery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>