force-app/main/default/objects/Person__c/validationRules/PreventNameEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventNameEdit</fullName>
    <active>true</active>
    <description>Zapobieganie edytowaniu pola Name Pacjenta</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>Pole Name Pacjenta jest uzupelniane automatycznie i nie może być edytowane</errorMessage>
</ValidationRule>